content: update hero subtitle text and keep accent spans as requested

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                     <!-- Main Heading -->
                     <div class="space-y-4">
                         <h1 class="text-5xl lg:text-7xl font-bold leading-tight glow-text">
-                            Digital
+                            AI-Powered
                             <br>
-                            <span class="tech-accent">Transformation</span>
+                            <span class="tech-accent">Voice Assistant</span>
                             <br>
                             for Real Estate
                         </h1>
@@ -86,10 +86,11 @@
                     
                     <!-- Subtitle -->
                     <p class="text-xl text-gray-300 leading-relaxed max-w-lg">
-                        We architect premium digital ecosystems that transform traditional real estate operations into 
-                        <span class="secondary-accent font-semibold">intelligent</span>, 
-                        <span class="tertiary-accent font-semibold">automated</span>, and 
-                        <span class="tech-accent font-semibold">scalable</span> businesses.
+                        VIA engages visitors, answers property questions, 
+                        <span class="secondary-accent font-semibold">collects contacts</span>, and 
+                        <span class="tertiary-accent font-semibold">keeps users</span> on your page 
+                        <span class="tertiary-accent font-semibold">longer</span> — 
+                        <span class="tech-accent font-semibold">boosting&nbsp;lead&nbsp;conversion</span> instantly.
                     </p>
                     
                     <!-- CTA Section -->
