content: update development card details; change label to 'Time to set up' and value to '5 minutes'

--- a/index.html
+++ b/index.html
@@ -305,33 +305,27 @@
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Landing Page Design & Build
+                                5 минут до запуска
                             </div>
                             <div class="detail-item">
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Admin Panel & Dashboard
+                                100% совместимость
                             </div>
                             <div class="detail-item">
                                 <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                                 </svg>
-                                Real Estate Platform Architecture
-                            </div>
-                            <div class="detail-item">
-                                <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                                </svg>
-                                Custom Property Portals
+                                0 технических требований
                             </div>
                         </div>
                         
                         <!-- Price and Expand -->
                         <div class="flex items-center justify-between pt-3">
                             <div>
-                                <div class="text-xs text-gray-400 mb-1">Starting from</div>
-                                <div class="text-2xl font-bold text-blue-400">€3,000</div>
+                                <div class="text-xs text-gray-400 mb-1">Time to set up</div>
+                                <div class="text-2xl font-bold text-blue-400">5 minutes</div>
                             </div>
                         </div>
                     </div>
