--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <script src="https://georgio-us.github.io/Voice-Widget-Frontend/loader.js" async></script>
+<script>
+  VoiceWidget.init({ corner: 'right-bottom' });
+</script>
 <header id="Header" class="Header">
   <div class="Header__container">
     <a href="#" class="Header__logo">
